--- a/Linkup/AndroidManifest.xml
+++ b/Linkup/AndroidManifest.xml
@@ -109,6 +109,23 @@
         <meta-data
             android:name="api_key"
             android:value="YfBUoGO0hYg5t7ayNrzXmGSi" />
+
+        <!-- For AdsSdk. -->
+        <activity
+            android:name="com.wandoujia.ads.sdk.AppWallActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.wandoujia.ads.sdk.AppWidgetContainerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <service android:name="com.wandoujia.ads.sdk.DownloadService" />
+        <!-- AdsSdk End. -->
     </application>
 
 </manifest>
