--- a/Linkup/AndroidManifest.xml
+++ b/Linkup/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.znv.linkup"
-    android:versionCode="7"
-    android:versionName="1.2.4" >
+    android:versionCode="8"
+    android:versionName="1.2.5" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -22,6 +22,7 @@
     <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
     <application
         android:name="com.baidu.frontia.FrontiaApplication"
@@ -78,9 +79,18 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
+
+        <!-- 微信分享回调 -->
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <!-- share sdk end -->
 
-        <!-- For Baidu push -->
+
+        <!-- For Baidu push -->
         <receiver android:name="com.znv.linkup.push.LinkupPushReceiver" >
             <intent-filter>
                 <action android:name="com.baidu.android.pushservice.action.MESSAGE" />
