--- a/Linkup/AndroidManifest.xml
+++ b/Linkup/AndroidManifest.xml
@@ -20,7 +20,8 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="com.xiaomi.market.sdk.UPDATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <!-- <uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
+
 
     <!-- android:name="com.baidu.frontia.FrontiaApplication" -->
     <application
