--- a/Linkup/AndroidManifest.xml
+++ b/Linkup/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <permission
+        android:name="com.znv.linkup.permission.MIPUSH_RECEIVE"
+        android:protectionLevel="signatureOrSystem" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,8 +23,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.xiaomi.market.sdk.UPDATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="com.znv.linkup.permission.MIPUSH_RECEIVE" />
 
     <application
+        android:name="com.znv.linkup.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -118,52 +124,48 @@
             </intent-filter>
         </receiver>
         <!-- 小米sdk end -->
+        
+        <!--  小米推送 begin -->
+        <service
+            android:name="com.xiaomi.push.service.XMPushService"
+            android:enabled="true"
+            android:process=":pushservice" />
+        <service
+            android:name="com.xiaomi.mipush.sdk.PushMessageHandler"
+            android:enabled="true"
+            android:exported="true" />
+        <service android:enabled="true"
+            android:name="com.xiaomi.mipush.sdk.MessageHandleService" />
 
+        <receiver
+            android:name="com.znv.linkup.push.MessageReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.RECEIVE_MESSAGE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.ERROR" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.NetworkStatusReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
 
-        <!-- For Baidu push -->
-        <!-- <receiver android:name="com.znv.linkup.push.LinkupPushReceiver" > -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.MESSAGE" /> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.RECEIVE" /> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.notification.CLICK" /> -->
-        <!-- </intent-filter> -->
-        <!-- </receiver> -->
-        <!-- <receiver -->
-        <!-- android:name="com.baidu.android.pushservice.PushServiceReceiver" -->
-        <!-- android:process=":bdservice_v1" > -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.BOOT_COMPLETED" /> -->
-        <!-- <action android:name="android.net.conn.CONNECTIVITY_CHANGE" /> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.notification.SHOW" /> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.media.CLICK" /> -->
-        <!-- </intent-filter> -->
-        <!-- </receiver> -->
-        <!-- <receiver -->
-        <!-- android:name="com.baidu.android.pushservice.RegistrationReceiver" -->
-        <!-- android:process=":bdservice_v1" > -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.METHOD" /> -->
-        <!-- <action android:name="com.baidu.android.pushservice.action.BIND_SYNC" /> -->
-        <!-- </intent-filter> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.PACKAGE_REMOVED" /> -->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.PingReceiver"
+            android:exported="false"
+            android:process=":pushservice" >
+            <intent-filter>
+                <action android:name="com.xiaomi.push.PING_TIMER" />
+            </intent-filter>
+        </receiver>
+        <!-- 小米推送 end -->
 
-
-        <!-- <data android:scheme="package" /> -->
-        <!-- </intent-filter> -->
-        <!-- </receiver> -->
-
-
-        <!-- <service -->
-        <!-- android:name="com.baidu.android.pushservice.PushService" -->
-        <!-- android:exported="true" -->
-        <!-- android:process=":bdservice_v1" /> -->
-
-
-        <!-- <meta-data -->
-        <!-- android:name="api_key" -->
-        <!-- android:value="YfBUoGO0hYg5t7ayNrzXmGSi" /> -->
-        <!-- Baidu push End -->
     </application>
 
 </manifest>
